upgrade to latest idom and idom-client-react

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -7,60 +7,20 @@
    "outputs": [],
    "source": [
     "import idom\n",
-    "from idom_jupyter import Layout\n",
-    "\n",
-    "\n",
-    "renders = []\n",
+    "import idom_jupyter\n",
     "\n",
     "\n",
     "@idom.element\n",
     "def ClickCount():\n",
     "    count, set_count = idom.hooks.use_state(0)\n",
-    "    renders.append(count)\n",
-    "    @idom.event(target_id=\"my-handler\")\n",
-    "    def handle_event(event):\n",
-    "        set_count(count + 1)\n",
     "\n",
     "    return idom.html.button(\n",
-    "        {\"onClick\": handle_event},\n",
+    "        {\"onClick\": lambda event: set_count(count + 1)},\n",
     "        [f\"Click count: {count}\"],\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layout = Layout(ClickCount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "renders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recv"
+    "    )\n",
+    "\n",
+    "\n",
+    "idom_jupyter.Layout(ClickCount)"
    ]
   },
   {
