add a few util functions
more importantly a display function so you can copy-paste examples
from the IDOM docs

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -1,15 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IDOM - A Brief Introduction\n",
+    "\n",
+    "IDOM is an easily installable and powerful Python package for:\n",
+    "\n",
+    "- Making responsive user interfaces with pure Python\n",
+    "\n",
+    "- Doing so with a declarative API based on React's Hooks\n",
+    "\n",
+    "- And rendering those layouts on the web or in Jupyter Notebooks\n",
+    "\n",
+    "This Notebook shows a basic example which is explained in more depth in IDOM's documentation where you can also find more examples.\n",
+    "\n",
+    "# Where Can You Learn More?\n",
+    "\n",
+    "Go to https://idom-docs.herokuapp.com/ for:\n",
+    "\n",
+    "- more documentation\n",
+    "\n",
+    "- installation instructions\n",
+    "\n",
+    "For trouble shooting/support:\n",
+    "\n",
+    "- https://github.com/idom-team/idom/issues/new/choose"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import idom\n",
-    "import idom_jupyter\n",
+    "from idom_jupyter import display\n",
     "\n",
     "\n",
+    "@widgetize\n",
     "@idom.element\n",
     "def ClickCount():\n",
     "    count, set_count = idom.hooks.use_state(0)\n",
@@ -20,7 +50,7 @@
     "    )\n",
     "\n",
     "\n",
-    "idom_jupyter.Layout(ClickCount)"
+    "display(ClickCount)"
    ]
   },
   {
