create idom_jupyter.run method which mirrors idom.run
This makes is easy to explain how to modify examples presented in IDOM
docs so they can run in Jupyter

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "import idom\n",
-    "from idom_jupyter import display\n",
+    "import idom_jupyter\n",
     "\n",
     "\n",
     "@idom.element\n",
@@ -49,15 +49,19 @@
     "    )\n",
     "\n",
     "\n",
-    "display(ClickCount)"
+    "idom_jupyter.run(ClickCount)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# More Examples\n",
+    "\n",
+    "Go to https://idom-docs.herokuapp.com/docs/examples.html to find more ways to use IDOM.\n",
+    "\n",
+    "Just replace `idom.run` with `idom_jupyter.run` to try them out here!"
+   ]
   }
  ],
  "metadata": {
