set the client implementation but raise notimplementederror

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "- installation instructions\n",
     "\n",
-    "For trouble shooting/support:\n",
+    "For trouble shooting and support:\n",
     "\n",
     "- https://github.com/idom-team/idom/issues/new/choose"
    ]
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
