--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
