minor update to make binder work

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -56,12 +56,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you've already installed [Victory Charts](https://formidable.com/open-source/victory/docs/victory-chart/) with IDOM ahead of time:\n",
+    "\n",
+    "```bash\n",
+    "idom install victory\n",
+    "```\n",
+    "\n",
+    "You can even use existing Javascript libraries without having to install anything else:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "victory = idom.Module(\"victory\")\n",
+    "VictoryBar = victory.Import(\"VictoryBar\")\n",
+    "idom_jupyter.run(idom.element(lambda: VictoryBar()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# More Examples\n",
     "\n",
     "Go to https://idom-docs.herokuapp.com/docs/examples.html to find more ways to use IDOM.\n",
     "\n",
     "Just replace `idom.run` with `idom_jupyter.run` to try them out here!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
