upgrade to idom 0.15.0

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -56,13 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you've already installed [Victory Charts](https://formidable.com/open-source/victory/docs/victory-chart/) with IDOM ahead of time:\n",
+    "# Easy Javascript Integration\n",
     "\n",
-    "```bash\n",
-    "idom install victory\n",
-    "```\n",
-    "\n",
-    "You can even use existing Javascript libraries without having to install anything else:"
+    "So long as you have [NPM](https://www.npmjs.com/) installed you can dynamically install existing Javascript libraries:"
    ]
   },
   {
@@ -71,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "victory = idom.Module(\"victory\")\n",
-    "VictoryBar = victory.Import(\"VictoryBar\")\n",
+    "victory = idom.install(\"victory\")\n",
+    "VictoryBar = victory.define(\"VictoryBar\")\n",
     "idom_jupyter.run(idom.element(lambda: VictoryBar()))"
    ]
   },
