better install command in notebook

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -67,7 +67,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "victory = idom.install(\"victory\")\n",
+    "!idom install victory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "victory = idom.Module(\"victory\")\n",
     "VictoryBar = victory.define(\"VictoryBar\")\n",
     "idom_jupyter.run(idom.element(lambda: VictoryBar()))"
    ]
