--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -49,7 +49,7 @@
     "    )\n",
     "\n",
     "\n",
-    "idom_jupyter.run(ClickCount)"
+    "ClickCount()"
    ]
   },
   {
@@ -76,9 +76,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "victory = idom.Module(\"victory\")\n",
+    "victory = idom.Module(\"victory\", fallback=\"loading...\")\n",
     "VictoryBar = victory.define(\"VictoryBar\")\n",
-    "idom_jupyter.run(idom.element(lambda: VictoryBar()))"
+    "\n",
+    "\n",
+    "@idom.element\n",
+    "def VictoryBarElement():\n",
+    "    return VictoryBar()\n",
+    "\n",
+    "\n",
+    "VictoryBarElement()"
    ]
   },
   {
