rename from "element" to "component"

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -39,7 +39,7 @@
     "import idom_jupyter\n",
     "\n",
     "\n",
-    "@idom.element\n",
+    "@idom.component\n",
     "def ClickCount():\n",
     "    count, set_count = idom.hooks.use_state(0)\n",
     "\n",
@@ -79,7 +79,7 @@
     "victory = idom.Module(\"victory\", fallback=\"loading...\")\n",
     "\n",
     "\n",
-    "@idom.element\n",
+    "@idom.component\n",
     "def VictoryBarElement():\n",
     "    return victory.VictoryBar()\n",
     "\n",
