--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
