--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -31,9 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54ca25e9c74e4790aea3020c3bf47cff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import idom\n",
     "import idom_jupyter\n",
@@ -63,18 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-03-30T16:24:30-0700 | INFO | Already installed ['victory']\r\n",
+      "2021-03-30T16:24:30-0700 | INFO | Build skipped ✅\r\n"
+     ]
+    }
+   ],
    "source": [
     "!idom install victory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33e61a1f3f7949c1a5c15a0d3c3e485a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "victory = idom.Module(\"victory\", fallback=\"loading...\")\n",
     "\n",
