clear cell output

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -31,24 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54ca25e9c74e4790aea3020c3bf47cff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import idom\n",
     "import idom_jupyter\n",
@@ -78,42 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-03-30T16:24:30-0700 | INFO | Already installed ['victory']\r\n",
-      "2021-03-30T16:24:30-0700 | INFO | Build skipped ✅\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!idom install victory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33e61a1f3f7949c1a5c15a0d3c3e485a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "victory = idom.Module(\"victory\", fallback=\"loading...\")\n",
     "\n",
@@ -132,9 +93,7 @@
    "source": [
     "# More Examples\n",
     "\n",
-    "Go to https://idom-docs.herokuapp.com/docs/examples.html to find more ways to use IDOM.\n",
-    "\n",
-    "Just replace `idom.run` with `idom_jupyter.run` to try them out here!"
+    "Go to https://idom-docs.herokuapp.com/docs/examples.html to find more ways to use IDOM."
    ]
   },
   {
