import idom-client-react from IDOM build

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -31,9 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b882d192a3647e69b54e45e42308432",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import idom\n",
     "import idom_jupyter\n",
