upgrade to latest version of IDOM

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b882d192a3647e69b54e45e42308432",
+       "model_id": "9711ccbb663d4c159a235d60b8c671c5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget()"
+       "LayoutWidget(Layout(ClickCount(139731329088704)))"
       ]
      },
      "metadata": {},
@@ -57,9 +57,8 @@
     "@idom.component\n",
     "def ClickCount():\n",
     "    count, set_count = idom.hooks.use_state(0)\n",
-    "\n",
     "    return idom.html.button(\n",
-    "        {\"onClick\": lambda event: set_count(count + 1)},\n",
+    "        {\"onClick\": lambda event: set_count(lambda old: old + 1)},\n",
     "        [f\"Click count: {count}\"],\n",
     "    )\n",
     "\n",
@@ -78,25 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c9a9642ce564bac8f57b54c32301101",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(VictoryBarElement(139730951084368)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "!idom install victory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "victory = idom.Module(\"victory\", fallback=\"loading...\")\n",
+    "victory = idom.web.module_from_template(\"react\", \"victory\", fallback=\"...\")\n",
+    "VictoryBar = idom.web.export(victory, \"VictoryBar\")\n",
     "\n",
     "\n",
     "@idom.component\n",
     "def VictoryBarElement():\n",
-    "    return victory.VictoryBar()\n",
+    "    return VictoryBar()\n",
     "\n",
     "\n",
     "VictoryBarElement()"
