upgrade to idom 0.33

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "victory = idom.web.module_from_template(\"react\", \"victory\", fallback=\"...\")\n",
+    "victory = idom.web.module_from_template(\"react\", \"victory-bar\", fallback=\"...\")\n",
     "VictoryBar = idom.web.export(victory, \"VictoryBar\")\n",
     "\n",
     "\n",
