update intro notebook

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -4,45 +4,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IDOM - A Brief Introduction\n",
+    "# What is IDOM?\n",
     "\n",
-    "IDOM is an easily installable and powerful Python package for:\n",
+    "DOM is a Python web framework for building interactive websites **without needing a single line of Javascript**. This is accomplished by breaking down complex applications into nestable and reusable chunks of code called “components” that allow you to focus on what your application does rather than how it does it.\n",
     "\n",
-    "- Making responsive user interfaces with pure Python\n",
+    "Ecosystem independence is also a core feature of IDOM. It can be added to existing applications built on a variety of sync and async web servers, as well as integrated with other frameworks like Django, Jupyter, and Plotly Dash. Not only does this mean you’re free to choose what technology stack to run on, but on top of that, you can run the exact same components wherever you need them. For example, you can take a component originally developed in a Jupyter Notebook like this one, and embed it in your production application without changing anything about the component itself.\n",
     "\n",
-    "- Doing so with a declarative API based on React's Hooks\n",
     "\n",
-    "- And rendering those layouts on the web or in Jupyter Notebooks\n",
+    "# Getting Started\n",
     "\n",
-    "This Notebook shows a basic example which is explained in more depth in IDOM's documentation where you can also find more examples.\n",
-    "\n",
-    "# Where Can You Learn More?\n",
-    "\n",
-    "Go to https://idom-docs.herokuapp.com/ for:\n",
-    "\n",
-    "- more documentation\n",
-    "\n",
-    "- installation instructions\n",
-    "\n",
-    "For trouble shooting and support:\n",
-    "\n",
-    "- https://github.com/idom-team/idom/issues/new/choose"
+    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is `import idom_jupyter`. After that, you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import idom_jupyter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# At a Glance\n",
+    "\n",
+    "To get a rough idea of how to write apps in IDOM, take a look at the tiny [“hello world”](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) application below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "App(7f1b902dc680)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9711ccbb663d4c159a235d60b8c671c5",
+       "model_id": "04d7722a7e6b4e10b071e806672e10ad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(ClickCount(139731329088704)))"
+       "LayoutWidget(Layout(App(7f1b902dc680)))"
       ]
      },
      "metadata": {},
@@ -50,45 +65,128 @@
     }
    ],
    "source": [
-    "import idom\n",
-    "import idom_jupyter\n",
+    "from idom import component, html, run\n",
     "\n",
     "\n",
-    "@idom.component\n",
-    "def ClickCount():\n",
-    "    count, set_count = idom.hooks.use_state(0)\n",
-    "    return idom.html.button(\n",
-    "        {\"onClick\": lambda event: set_count(lambda old: old + 1)},\n",
-    "        [f\"Click count: {count}\"],\n",
+    "@component\n",
+    "def App():\n",
+    "    return html.h1(\"Hello, World!\")\n",
+    "\n",
+    "\n",
+    "App()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating Interfaces\n",
+    "\n",
+    "IDOM is a Python package for making user interfaces (UI). These interfaces are built from small elements of functionality like buttons text and images. IDOM allows you to combine these elements into reusable “components”. Once you learn how these UI elements are created and organized into components you'll be able to do things like create interfaces from raw data:\n",
+    "\n",
+    "<a href=\"https://idom-docs.herokuapp.com/docs/creating-interfaces/index.html\" target=\"_blank\"><button>Read More!</button></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TodoList(7f1b804cfae0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2815556dcbc428cb006f26570bb9dd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(TodoList(7f1b804cfae0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from idom import component, html\n",
+    "\n",
+    "\n",
+    "@component\n",
+    "def DataList(items, filter_by_priority=None, sort_by_priority=False):\n",
+    "    if filter_by_priority is not None:\n",
+    "        items = [i for i in items if i[\"priority\"] <= filter_by_priority]\n",
+    "    if sort_by_priority:\n",
+    "        items = list(sorted(items, key=lambda i: i[\"priority\"]))\n",
+    "    list_item_elements = [html.li(i[\"text\"], key=i[\"id\"]) for i in items]\n",
+    "    return html.ul(list_item_elements)\n",
+    "\n",
+    "\n",
+    "@component\n",
+    "def TodoList():\n",
+    "    tasks = [\n",
+    "        {\"id\": 0, \"text\": \"Make breakfast\", \"priority\": 0},\n",
+    "        {\"id\": 1, \"text\": \"Feed the dog\", \"priority\": 0},\n",
+    "        {\"id\": 2, \"text\": \"Do laundry\", \"priority\": 2},\n",
+    "        {\"id\": 3, \"text\": \"Go on a run\", \"priority\": 1},\n",
+    "        {\"id\": 4, \"text\": \"Clean the house\", \"priority\": 2},\n",
+    "        {\"id\": 5, \"text\": \"Go to the grocery store\", \"priority\": 2},\n",
+    "        {\"id\": 6, \"text\": \"Do some coding\", \"priority\": 1},\n",
+    "        {\"id\": 7, \"text\": \"Read a book\", \"priority\": 1},\n",
+    "    ]\n",
+    "    return html.section(\n",
+    "        html.h1(\"My Todo List\"),\n",
+    "        DataList(tasks, filter_by_priority=1, sort_by_priority=True),\n",
     "    )\n",
     "\n",
     "\n",
-    "ClickCount()"
+    "TodoList()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Easy Javascript Integration\n",
+    "# Adding Interactivity\n",
     "\n",
-    "So long as you have [NPM](https://www.npmjs.com/) installed you can dynamically install existing Javascript libraries:"
+    "Components often need to change what’s on the screen as a result of an interaction. For example, typing into the form should update the input field, clicking a “Comment” button should bring up a text input field, clicking “Buy” should put a product in the shopping cart. Components need to “remember” things like the current input value, the current image, the shopping cart. In IDOM, this kind of component-specific memory is created and updated with a “hook” called use_state() that creates a state variable and state setter respectively:\n",
+    "\n",
+    "<a href=\"https://idom-docs.herokuapp.com/docs/adding-interactivity/index.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Gallery(7f1b6a1636d0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c9a9642ce564bac8f57b54c32301101",
+       "model_id": "5f26993f7df049759a837c9d53cd0738",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(VictoryBarElement(139730951084368)))"
+       "LayoutWidget(Layout(Gallery(7f1b6a1636d0)))"
       ]
      },
      "metadata": {},
@@ -96,25 +194,106 @@
     }
    ],
    "source": [
-    "victory = idom.web.module_from_template(\"react\", \"victory-bar\", fallback=\"...\")\n",
-    "VictoryBar = idom.web.export(victory, \"VictoryBar\")\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from idom import component, use_state, html\n",
     "\n",
     "\n",
-    "@idom.component\n",
-    "def VictoryBarElement():\n",
-    "    return VictoryBar()\n",
+    "DATA_PATH = Path().parent / \"data\" / \"gallery-data.json\"\n",
+    "sculpture_data = json.loads(DATA_PATH.read_text())\n",
     "\n",
     "\n",
-    "VictoryBarElement()"
+    "@component\n",
+    "def Gallery():\n",
+    "    index, set_index = use_state(0)\n",
+    "\n",
+    "    def handle_click(event):\n",
+    "        set_index(index + 1)\n",
+    "\n",
+    "    bounded_index = index % len(sculpture_data)\n",
+    "    sculpture = sculpture_data[bounded_index]\n",
+    "    alt = sculpture[\"alt\"]\n",
+    "    artist = sculpture[\"artist\"]\n",
+    "    description = sculpture[\"description\"]\n",
+    "    name = sculpture[\"name\"]\n",
+    "    url = sculpture[\"url\"]\n",
+    "\n",
+    "    return html.div(\n",
+    "        html.button({\"onClick\": handle_click}, \"Next\"),\n",
+    "        html.h2(name, \" by \", artist),\n",
+    "        html.p(f\"({bounded_index + 1} or {len(sculpture_data)})\"),\n",
+    "        html.img({\"src\": url, \"alt\": alt, \"style\": {\"height\": \"200px\"}}),\n",
+    "        html.p(description),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "Gallery()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# More Examples\n",
+    "# Javascript Integration\n",
     "\n",
-    "Go to https://idom-docs.herokuapp.com/docs/examples.html to find more ways to use IDOM."
+    "While IDOM is a great tool for displaying HTML and responding to browser events with pure Python, there are other projects which already allow you to do this inside Jupyter Notebooks or in standard web apps. The real power of IDOM comes from its ability to seamlessly leverage the existing Javascript ecosystem:\n",
+    "\n",
+    "<a href=\"https://idom-docs.herokuapp.com/docs/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ViewButtonEvents(7f1b804de180)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e64272d8e2e7460f93aca2b7887cfe99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ViewButtonEvents(7f1b804de180)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from idom import component, web\n",
+    "\n",
+    "\n",
+    "victory = web.module_from_template(\"react\", \"victory-bar\", fallback=\"⌛\")\n",
+    "VictoryBar = web.export(victory, \"VictoryBar\")\n",
+    "\n",
+    "\n",
+    "@component\n",
+    "def Demo():\n",
+    "    bar_style = {\"parent\": {\"width\": \"500px\"}, \"data\": {\"fill\": \"royalblue\"}}\n",
+    "    return VictoryBar({\"style\": bar_style})\n",
+    "\n",
+    "\n",
+    "Demo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Learn More!](https://idom-docs.herokuapp.com)"
    ]
   },
   {
