--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "App(7fb06f32c400)"
+       "App(7f911920b6a0)"
       ]
      },
      "execution_count": 2,
@@ -52,12 +52,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c788abe7d2404a57a53902bdb13f4c1a",
+       "model_id": "14bfdffe5d5148b8bf923dc95fbfd788",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(App(7fb06f32c400)))"
+       "LayoutWidget(Layout(App(7f911920b6a0)))"
       ]
      },
      "metadata": {},
@@ -89,34 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TodoList(7fb06f32c880)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6263559b25bf445e9c8c3e8e12995d0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(TodoList(7fb06f32c880)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from idom import component, html\n",
     "\n",
@@ -165,34 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gallery(7fb0845b7460)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7421b51daf6c44e09922f2cc3df143e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(Gallery(7fb0845b7460)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
@@ -239,46 +189,14 @@
     "\n",
     "While IDOM is a great tool for displaying HTML and responding to browser events with pure Python, there are other projects which already allow you to do this inside Jupyter Notebooks or in standard web apps. The real power of IDOM comes from its ability to seamlessly leverage the existing Javascript ecosystem:\n",
     "\n",
-    "<a href=\"https://idom-docs.herokuapp.com/docs/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
+    "<a href=\"https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-12-23T00:31:22-0800 | \u001b[32mINFO\u001b[0m | Existing web module '__from_template__/victory-bar.js' will be replaced with /home/ryan/.local/share/idom-jupyter/__from_template__/victory-bar.js\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Demo(7fb06f32e3e0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "041a6087bb294cfcac034f01decee3a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(Demo(7fb06f32e3e0)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from idom import component, web\n",
     "\n",
@@ -306,7 +224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
