--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,22 +14,14 @@
     "\n",
     "# Getting Started\n",
     "\n",
-    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is `import idom_jupyter`. After that, you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import idom_jupyter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is install `idom_jupyter` Jupyter with PIP:\n",
+    "\n",
+    "```bash\n",
+    "pip install idom-jupyter\n",
+    "```\n",
+    "\n",
+    "Once this is done you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#).\n",
+    "\n",
     "# At a Glance\n",
     "\n",
     "To get a rough idea of how to write apps in IDOM, take a look at the tiny [“hello world”](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) application below:"
@@ -36,32 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "App(7f911920b6a0)"
+       "App(7fe7b39a65c0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14bfdffe5d5148b8bf923dc95fbfd788",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(App(7f911920b6a0)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
