--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -29,20 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "App(7fe7b39a65c0)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from idom import component, html, run\n",
     "\n",
@@ -217,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Aug 13 2022, 00:11:04) [GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
