--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,14 +13,22 @@
     "\n",
     "# Getting Started\n",
     "\n",
-    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is install `idom_jupyter` Jupyter with PIP:\n",
-    "\n",
-    "```bash\n",
-    "pip install idom-jupyter\n",
-    "```\n",
-    "\n",
-    "Once this is done you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#).\n",
-    "\n",
+    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is `import idom_jupyter`. After that, you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import idom_jupyter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# At a Glance\n",
     "\n",
     "To get a rough idea of how to write apps in IDOM, take a look at the tiny [“hello world”](https://en.wikipedia.org/wiki/%22Hello,_World!%22_program) application below:"
@@ -157,7 +164,7 @@
     "\n",
     "While IDOM is a great tool for displaying HTML and responding to browser events with pure Python, there are other projects which already allow you to do this inside Jupyter Notebooks or in standard web apps. The real power of IDOM comes from its ability to seamlessly leverage the existing Javascript ecosystem:\n",
     "\n",
-    "<a href=\"https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
+    "<a href=\"https://idom-docs.herokuapp.com/docs/escape-hatches/javascript-components.html\" target=\"_blank\"><button>Read More!</button></a>"
    ]
   },
   {
@@ -192,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -206,12 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Aug 13 2022, 00:11:04) [GCC 9.4.0]"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "52bee9646c8f5526f0e9a8eb5a97552aae62c8d54f85864da3e91d79a91aa9b6"
-   }
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
