--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -1,14 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# What is IDOM?\n",
     "\n",
-    "IDOM is a Python web framework for building interactive websites **without needing a single line of Javascript**. This is accomplished by breaking down complex applications into nestable and reusable chunks of code called “components” that allow you to focus on what your application does rather than how it does it.\n",
+    "IDOM connects your Python web framework of choice to a ReactJS frontend, allowing you to create **interactive websites without needing JavaScript!**\n",
     "\n",
-    "Ecosystem independence is also a core feature of IDOM. It can be added to existing applications built on a variety of sync and async web servers, as well as integrated with other frameworks like Django, Jupyter, and Plotly Dash. Not only does this mean you’re free to choose what technology stack to run on, but on top of that, you can run the exact same components wherever you need them. For example, you can take a component originally developed in a Jupyter Notebook like this one, and embed it in your production application without changing anything about the component itself.\n",
+    "Following ReactJS styling, web elements are combined into [reusable \"components\"](https://idom-docs.herokuapp.com/docs/guides/creating-interfaces/your-first-components/index.html#parametrizing-components). These components can utilize [hooks](https://idom-docs.herokuapp.com/docs/reference/hooks-api.html) and [events](https://idom-docs.herokuapp.com/docs/guides/adding-interactivity/responding-to-events/index.html#async-event-handlers) to create infinitely complex web pages.\n",
+    "\n",
+    "When needed, IDOM can [use components directly from NPM](https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#dynamically-loaded-components). For additional flexibility, components can also be [fully developed in JavaScript](https://idom-docs.herokuapp.com/docs/guides/escape-hatches/javascript-components.html#custom-javascript-components).\n",
     "\n",
     "\n",
     "# Getting Started\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +39,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "App(7fb016a9afe0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a9d9d0847d94e71b53ee3e9b22566d9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(App(7fb016a9afe0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from idom import component, html, run\n",
     "\n",
@@ -115,9 +143,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gallery(7fb017f937c0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd0ea39fb8164a12a6e3b495296b9ea3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(Gallery(7fb017f937c0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
@@ -154,6 +207,130 @@
     "\n",
     "\n",
     "Gallery()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using IDOM With Jupyter Widgets\n",
+    "\n",
+    "While you can use IDOM components independently, it may also be useful to integrate them with the rest of the Jupyter Widget ecosystem. Let's consider an IDOM component that responds to and displays changes from an `ipywidgets.IntSlider`. The IDOM component will need to accept an `IntSlider` instance as one of its arguments, declare state that will track the slider's value, and register a lister that will update that state via the slider's `IntSlider.observe()` method using an [\"effect\"](https://idom-docs.herokuapp.com/docs/reference/hooks-api.html#use-effect):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from idom import use_effect\n",
+    "\n",
+    "\n",
+    "@component\n",
+    "def SliderObserver(slider):\n",
+    "    value, set_value = use_state(0)\n",
+    "\n",
+    "    @use_effect\n",
+    "    def register_observer():\n",
+    "\n",
+    "        def handle_change(change):\n",
+    "            set_value(change[\"new\"])\n",
+    "\n",
+    "        # observe the slider's value\n",
+    "        slider.observe(handle_change, \"value\")\n",
+    "        # unobserve the slider's value if this component is no longer displayed\n",
+    "        return lambda: slider.unobserve(handle_change, \"value\")\n",
+    "\n",
+    "    return html.p(f\"IDOM observes the value to be: \", value)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you'll need to display the `SliderObserver` component as well as an `IntSlider` widget. To do this, you'll want wrap the component in a `idom_jupyter.LayoutWidget` instance before using it alongside other Jupyter Widgets. Specifically, you'll be displaying the `SliderObserver` and `IntSlider` in a `Box`:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ce3c50a8f1e4c6ca7c290cee10a89af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(IntSlider(value=0, readout=False), LayoutWidget(Layout(SliderObserver(7fb01611ed40, slider=IntSl…"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ipywidgets import Box, IntSlider\n",
+    "from idom_jupyter import LayoutWidget\n",
+    "\n",
+    "slider = IntSlider(readout=False)\n",
+    "slider_observer = LayoutWidget(SliderObserver(slider))\n",
+    "\n",
+    "Box([slider, slider_observer])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If it becomes painful to wrap every IDOM component in a `LayoutWidget` you can create an alternate `LayoutWidget` constructor using `idom_jupyter.widgetize`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1797d7cf50f4b1eb9d5cfe34ef87663",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(IntSlider(value=0, readout=False), LayoutWidget(Layout(SliderObserver(7fb01611fa00, slider=IntSl…"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from idom_jupyter import widgetize\n",
+    "\n",
+    "SliderObserverWidget = widgetize(SliderObserver)\n",
+    "\n",
+    "slider = IntSlider(readout=False)\n",
+    "slider_observer = SliderObserverWidget(slider)\n",
+    "\n",
+    "Box([slider, slider_observer])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's worth noting that, while IDOM can be used with Jupyter Widgets, the reverse is not true. That is, **you cannot using a Jupyter Widget inside an IDOM component**. If this is a capability you would find useful, please [start a discussion](https://github.com/idom-team/idom/discussions). The IDOM team would be very interested to hear how allowing Jupyter Widgets to be used with IDOM could facilitate your work."
    ]
   },
   {
@@ -199,7 +376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +390,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "52bee9646c8f5526f0e9a8eb5a97552aae62c8d54f85864da3e91d79a91aa9b6"
+   }
   }
  },
  "nbformat": 4,
