--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -16,12 +16,26 @@
     "\n",
     "# Getting Started\n",
     "\n",
-    "The first thing we need must do in order to run IDOM in a Jupyter Notebook is `import idom_jupyter`. After that, you'll be able to use IDOM components like any other [Jupyter Widget](https://ipywidgets.readthedocs.io/en/latest/#)."
+    "Then, before anything else, do one of the following:\n",
+    "\n",
+    "1. At the top of your notebook run\n",
+    "\n",
+    "   ```python\n",
+    "   import idom_jupyter\n",
+    "   ```\n",
+    "\n",
+    "2. Register `idom_jupyter` as a permanant IPython extension in [your config file](https://ipython.readthedocs.io/en/stable/config/intro.html#introduction-to-ipython-configuration):\n",
+    "\n",
+    "   ```python\n",
+    "   c.InteractiveShellApp.extensions = ['idom_jupyter']\n",
+    "   ```\n",
+    "\n",
+    "For the purposes of this tutorial, you'll want to do the first:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,34 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "App(7fb016a9afe0)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a9d9d0847d94e71b53ee3e9b22566d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(App(7fb016a9afe0)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from idom import component, html, run\n",
     "\n",
@@ -143,34 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gallery(7fb017f937c0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd0ea39fb8164a12a6e3b495296b9ea3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LayoutWidget(Layout(Gallery(7fb017f937c0)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
@@ -221,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,25 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ce3c50a8f1e4c6ca7c290cee10a89af",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(IntSlider(value=0, readout=False), LayoutWidget(Layout(SliderObserver(7fb01611ed40, slider=IntSl…"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import Box, IntSlider\n",
     "from idom_jupyter import LayoutWidget\n",
@@ -295,25 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1797d7cf50f4b1eb9d5cfe34ef87663",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(IntSlider(value=0, readout=False), LayoutWidget(Layout(SliderObserver(7fb01611fa00, slider=IntSl…"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from idom_jupyter import widgetize\n",
     "\n",
